Added travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,14 @@ before_instal:
 script:
  - docker run -e CI=true guilevi/docker-react npm run test
 
-  
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-418240963901"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
